[package]
name = "albedo"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
categories = ["graphics"]
description = "Data-driven graphics library for real-time visualization"
keywords = ["graphics", "rendering", "raytracing", "albedo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/albedo-engine/albedo"
exclude = ["assets/**/*", ".github/**/*", "crates/**/*"]

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
wgpu = { version = "24.0.0", features = ["spirv", "glsl", "naga-ir"] }
pas = "0.3.0"

[dev-dependencies]
albedo_backend = { path = "crates/albedo_backend" }
albedo_rtx = { path = "crates/albedo_rtx" }
bytemuck = { version = "1.7.2", features = ["derive"] }
image = { version = "0.23", default-features = false, features = ["hdr"] }
enumflags2 = "0.7.1"
winit = "0.30.5"
glam = "0.20.2"
gltf = "0.15.2"
pollster = "0.2"
nanorand = { version = "0.7.0", features = ["wyrand"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.74", default-features = false }

[[example]]
name = "gpu_picking"
path = "examples/gpu_picking/main.rs"
