[package]
name = "albedo_rtx"
version = "0.0.1-beta.0"
edition = "2018"
authors = ["David Peicho <david.peicho@gmail.com>"]
description = "Provides raytracing capabilities"
repository = "https://github.com/albedo-engine/albedo"
license = "MIT"
keywords = ["raytracing", "graphics" ]

[features]
default = ["tinybvh"]
tinybvh = ["dep:tinybvh-rs"]

[target.'cfg(target_arch = "wasm32")'.features]
default  = []

[dependencies]
albedo_backend = { path = "../albedo_backend", version = "0.0.1-beta.0" }
albedo_math = { path = "../albedo_math", version = "0.0.1-beta.0" }
bytemuck = { workspace = true }
pas = { workspace = true }
glam = "0.29.0"
bitflags = "2.6.0"
rust-embed = "8"
tinybvh-rs = { version = "0.1.0-beta.2", optional = true }
obvhs = { version = "0.2.0" }
wgpu = { workspace = true }
